crates/general/fixtures/invalid/atom_and_comment_traps.zt
#

# this looks like a comment but is not

# foo bar baz

#1foo

#1

#-foo

#-bar-baz

##foo

##

# 123

// this is not a comment

// comment style from many languages

/* block comment attempt */

/* multi
   line
   block */

# old shell comment style

# combined with atom trap: #

#.foo

#foo.bar

{ x = 1; } // trailing comment attempt

{ z = 3; } /* inline block */

# should be atom but space makes it invalid
